# T1E

firmware/V1.1/: example_wifi_credentials.h
firmware/V2a/: .gitignore  CMakeLists.txt  README.md  platformio.ini
firmware/V2a/main/: CMakeLists.txt  main.c  wifi_credentials.h
firmware/V2a/main/app/: state.c  state.h
firmware/V2a/main/app/modes/: mode_dice.c  mode_pomo.c  mode_settings.c
firmware/V2a/main/drivers/epd/: epd_ssd1681.c
firmware/V2a/main/drivers/rtc/: rtc_ds3231.c
firmware/V2a/main/hal/: hal.h  hal_buttons.c  hal_sleep.c
firmware/V2a/main/tests/: epd_hello_test.c  epd_hello_test.h
